--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@chainlink/token": "^1.1.0",
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@openzeppelin/contracts": "^4.3.2",
+    "@sushiswap/core": "^1.4.2",
     "babel-eslint": "^10.1.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
