--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^0.2.2",
-    "@openzeppelin/contracts": "^4.3.2",
-    "@sushiswap/core": "^1.4.2"
+    "@openzeppelin/contracts": "^3.4.0",
+    "@sushiswap/core": "^1.4.2",
+    "dotenv": "^10.0.0"
   }
 }
