--- a/package.json
+++ b/package.json
@@ -7,13 +7,23 @@
   "scripts": {
     "compile": "npx hardhat compile --force",
     "clean": "npx hardhat clean",
-    "deploy-tokens": "npx hardhat run scripts/01-deploy-tokens.js --network kovan",
+
+    "mint-tokens": "npx hardhat run scripts/01-mint-tokens.js --network kovan",
     "deploy-pool-liquifier": "npx hardhat run scripts/02-deploy-pool-liquifier.js --network kovan",
     "add-liquidity": "npx hardhat run scripts/03-add-liquidity.js --network kovan",
     "remove-liquidity": "npx hardhat run scripts/04-remove-liquidity.js --network kovan",
-    "deploy-swapper": "npx hardhat run scripts/05-deploy-swapper.js --network kovan",
-    "swap-to-wbtc": "END_TOKEN=WBTC npx hardhat run scripts/06-test-swap.js --network kovan",
-    "swap-to-tusd": "END_TOKEN=TUSD npx hardhat run scripts/06-test-swap.js --network kovan"
+
+    "deploy-oracle-master": "npx hardhat run scripts/05-deploy-oracle-master.js --network kovan",
+    "fund-oracle-master": "npx hardhat run scripts/06-fund-oracle-master.js --network kovan",
+    "deploy-token-swapper": "npx hardhat run scripts/07-deploy-token-swapper.js --network kovan",
+    "deploy-swapai": "npx hardhat run scripts/08-deploy-swapai.js --network kovan",
+
+    "deploy-tokens": "npx hardhat run scripts/10-deploy-tokens.js --network kovan",
+    "deploy-contracts": "npx hardhat run scripts/11-deploy-contracts.js --network kovan",
+
+    "view-account-balances": "npx hardhat run scripts/20-view-account-balances.js --network kovan",
+    "test-swap-to-wbtc": "END_TOKEN=WBTC npx hardhat run scripts/22-test-swap-tokens.js --network kovan",
+    "test-swap-to-tusd": "END_TOKEN=TUSD npx hardhat run scripts/22-test-swap-tokens.js --network kovan"
   },
   "repository": {
     "type": "git",
@@ -26,7 +36,7 @@
   "homepage": "https://github.com/Dhanush123/swapai-backend#readme",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@nomiclabs/hardhat-etherscan": "^2.1.8",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.1",
